sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:13: error: value downwardto is not a member of Int
    for (i <- (n-2) downwardto 0) {
                    ^